--- a/changgou-parent/changgou-service-api/changgou-service-goods-api/pom.xml
+++ b/changgou-parent/changgou-service-api/changgou-service-goods-api/pom.xml
@@ -6,17 +6,21 @@
         <artifactId>changgou-parent</artifactId>
         <groupId>org.changgou</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>changgou-service-goods-api</artifactId>
+    <artifactId>changgou-service-PKGoods-api</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.12.3</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.changgou</groupId>
+            <artifactId>changgou-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
