--- a/code-template-master/src/main/resources/application.properties
+++ b/code-template-master/src/main/resources/application.properties
@@ -1,21 +1,21 @@
 #pojo\u5305\u8DEF\u5F84
-pojoPackage=com.changgou.goods.pojo
+pojoPackage=com.changgou.PKGoods.pojo
 #Dao\u5305\u8DEF\u5F84
-mapperPackage=com.changgou.goods.dao
+mapperPackage=com.changgou.PKGoods.dao
 #service\u63A5\u53E3\u5305\u8DEF\u5F84
-serviceInterfacePackage=com.changgou.goods.service
+serviceInterfacePackage=com.changgou.PKGoods.service
 #service\u63A5\u53E3\u5B9E\u73B0\u7C7B\u5305\u8DEF\u5F84
-serviceInterfaceImplPackage=com.changgou.goods.service.impl
+serviceInterfaceImplPackage=com.changgou.PKGoods.service.impl
 #controller\u5305\u8DEF\u5F84
-controllerPackage=com.changgou.goods.controller
+controllerPackage=com.changgou.PKGoods.controller
 #feign\u5305\u8DEF\u5F84
-feignPackage=com.changgou.goods.feign
+feignPackage=com.changgou.PKGoods.feign
 #\u662F\u5426\u542F\u7528swagger(\u76EE\u524D\u53EA\u505A\u4E86Pojo\u751F\u6210)
 enableSwagger=true
 #swagger-ui\u7684\u8DEF\u5F84
 swaggeruipath=com.changgou.swagger
 #\u670D\u52A1\u540D\u5B57
-serviceName=goods
+serviceName=PKGoods
 
 #\u6570\u636E\u6E90\u914D\u7F6E
 url=jdbc:mysql://192.168.211.132:3306/changgou_goods
